syntax = "proto3";
package m2g.pb;

enum CardType {
  NO_CARD = 0;
}

enum CardCategory {
  NO_CARD_CATEGORY = 0;
}
